# helloplugin

./: Cargo.toml  justfile
c_src/: input_for_cc.c
examples/: hello_world.rs
ll_src/: input_for_cc.ll  input_for_hello.ll
